--- a/my.ini
+++ b/my.ini
@@ -2,7 +2,7 @@
 host = http://127.0.0.1:33210
 
 [work]
-file_name = address2.xlsx
+file_name = work.xlsx
 file_output_name = result.xlsx
 sleep_time = 1
 one_open_browser_count = 500
